--- a/core/data/meta/podcast/korrespondenz_epos.html
+++ b/core/data/meta/podcast/korrespondenz_epos.html
@@ -877,8 +877,7 @@
                 </div>
             </div>
 
-            <audio id="audio-player" src="../audio/das_villa_kunterbunt_kompendium_die_erste_studienanalyse.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3" preload="metadata"></audio>
 
             <div class="nav-links"
                 style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center; flex-direction: column; gap: 15px;">
