Refactor: Standardize podcast layout, branding, and playback settings

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Villa Kunterbunt | Anthologie (Hörbuch)</title>
+    <title>Villa Kunterbunt | Die Anthologie & Apokryphen</title>
+    <link rel="icon" type="image/png" href="../../../website/data/main/images/favicon.png">
 
     <!-- SEO / Social Media -->
-    <meta property="og:title" content="Die Villa Kunterbunt - Episode VI (aBook)">
+    <meta property="og:title" content="Die Villa Kunterbunt - Anthologie & Apokryphen">
     <meta property="og:description" content="Klassische Bürokratie trifft auf moderne Korrespondenz.">
     <meta property="og:image"
         content="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png">
@@ -614,7 +615,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Die Villa Kunterbunt Anthologie | Das Hörbuch</div>
+            <div class="subtitle">Die Anthologie & Apokryphen</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
@@ -642,7 +643,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">Die Villa Kunterbunt Anthologie (Hörbuch)</div>
+            <div class="episode-tag">Die Anthologie & Apokryphen (Hörbuch)</div>
             <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
@@ -871,9 +872,9 @@
             if ('mediaSession' in navigator) {
                 audio.addEventListener('play', () => {
                     navigator.mediaSession.metadata = new MediaMetadata({
-                        title: "Die Villa Kunterbunt Anthologie | Das Hörbuch",
-                        artist: "Die Villa Kunterbunt",
-                        album: "Die Anthologie",
+                        title: "Das Hörbuch",
+                        artist: "Villa Kunterbunt",
+                        album: "Die Anthologie & Apokryphen",
                         artwork: [
                             { src: new URL("../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
                         ]
