--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Villa Kunterbunt | Das Hörbuch (Epos)</title>
+    <title>Villa Kunterbunt | Das Korrespondenz Epos</title>
+    <link rel="icon" type="image/png" href="../../../website/data/main/images/favicon.png">
 
     <!-- SEO / Social Media -->
     <meta property="og:title" content="Die Villa Kunterbunt | Das Hörbuch">
@@ -560,7 +561,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Korrespondenz Epos | Das Hörbuch</div>
+            <div class="subtitle">Das Korrespondenz Epos</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
@@ -579,7 +580,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">Das Villa Kunterbunt Epos (Hörbuch)</div>
+            <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
             <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
@@ -601,12 +602,25 @@
             </div>
 
             <div class="episode-description">
-                Das Hörbuch umfasst die vollständige Korrespondenz zum Projekt „<strong>Die Villa Kunterbunt</strong>“.
-                Erleben Sie die systemanalytische Aufarbeitung und den kommunikativen Schlagabtausch
-                als zusammenhängendes Audio-Erlebnis. Die Dokumentation beleuchtet die prozessualen Hürden
-                und die satirische Dekonstruktion bürokratischer Strukturen.
+                In dieser Episode tauchen wir tief in das „Epos der Villa Kunterbunt“ ein – ein Dokument, das weit über
+                eine gewöhnliche Kundenbeschwerde hinausgeht und sich als Manifest moderner Verbraucherfrustration
+                versteht. Der Host analysiert die Korrespondenz rund um den berüchtigten Phasenausfall L3 und
+                dekonstruiert dabei die systemischen Versäumnisse großer Versorgungsunternehmen. Es ist eine Reise durch
+                ein „prozessuales Paralleluniversum“, in dem administrative Blindheit auf technische Inkompetenz trifft.
+                <br><br>
+                Die Analyse beleuchtet, wie der betroffene Kunde durch einen radikalen Strategiewechsel – weg vom
+                „Bittsteller“, hin zum „Anlieferer wertvoller Prozessdaten“ – die Spielregeln des Konzern-Dialogs
+                ändert. Besonders im Fokus stehen die satirischen Spitzen gegen das „Remote-Voodoo“ der Fernanalyse und
+                die Kunst, für 15 Minuten wirkungslose Arbeit horrende Summen in Rechnung zu stellen. Die Episode
+                arbeitet heraus, dass die Suche nach der „dritten Phase“ letztlich die Suche nach einer kompetenten
+                Instanz ist, die Verantwortung in einem automatisierten System übernimmt.
+                <br><br>
+                Für Professionals aus den Bereichen Customer Experience (CX), Qualitätsmanagement und
+                Business-Transformation bietet diese Folge eine brillante Fallstudie. Sie zeigt auf, wie Unternehmen
+                durch Ignoranz ihre eigene Reputation demontieren und warum echte Fachkompetenz am „Kabel“ wertvoller
+                ist als jede Management-Sitzung. Ein tiefgründiger, analytischer und zugleich unterhaltsamer Blick auf
+                die Abgründe des modernen Dienstleistungswesens.
             </div>
-
             <div class="player-controls">
                 <button class="control-btn" onclick="skip(-30)" title="-30s">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -789,9 +803,9 @@
         if ('mediaSession' in navigator) {
             audio.addEventListener('play', () => {
                 navigator.mediaSession.metadata = new MediaMetadata({
-                    title: "E01: Die erweiterte Studienanalyse",
-                    artist: "Die Villa Kunterbunt",
-                    album: "Korrespondenz Epos",
+                    title: "Das Hörbuch",
+                    artist: "Villa Kunterbunt",
+                    album: "Das Korrespondenz Epos",
                     artwork: [
                         { src: new URL("../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
                     ]
