--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Villa Kunterbunt | Das Korrespondenz Epos</title>
+    <title>Villa Kunterbunt | Das Korrespondenz Epos</title>
     <link rel="stylesheet" href="core/website/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +84,7 @@
                         <span id="icon-mute" style="display:none;">🔇</span>
                     </button>
                 </div>
-                <input type="range" id="volume-slider" min="0" max="1" step="0.05" value="0.5" class="volume-slider"
+                <input type="range" id="volume-slider" min="0" max="1" step="0.05" value="0.4" class="volume-slider"
                     aria-label="Volume">
             </div>
         </div>
@@ -323,7 +323,7 @@
             });
 
             // Init State
-            audio.volume = 0.5;
+            audio.volume = 0.4;
             // Initialize muted state and update UI
             updateMuteState(audio.muted);
 
