--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Villa Kunterbunt | Das Audio Epos</title>
+    <title>Villa Kunterbunt | Das Korrespondenz Epos</title>
+    <link rel="icon" type="image/png" href="../../../website/data/main/images/favicon.png">
     <meta name="description"
         content="Die Audio-Dokumentation zum Fall Villa Kunterbunt vs. E.ON & Bayernwerk. Erfahrungen, Hintergründe und die Analyse eines administrativen Versagens.">
 
@@ -692,7 +693,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Das Villa Kunterbunt Epos (Hörbuch)</div>
+                    <div class="episode-tag">Das Korrespondenz Epos (Hörbuch)</div>
                     <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
@@ -714,8 +715,8 @@
                     </div>
 
                     <div class="episode-description">
-                        Das vollständige Hörbuch: Die gesammelte Korrespondenz zum Projekt „Die Villa Kunterbunt“ als
-                        zusammenhängendes Audio-Erlebnis.
+                        Eine metaanalytische Betrachtung des Manifests „Villa Kunterbunt“: Wie Satire und präzise
+                        Systemkritik als Notwehr gegen korporative Trägheit und automatisierte Service-Wüsten dienen.
                     </div>
 
                     <div class="player-controls">
@@ -764,14 +765,8 @@
         </div>
 
         <footer>
-            <a href="https://derlemue.github.io/villa-kunterbunt/"
-                style="display:inline-flex; align-items:center; gap:8px; color:var(--text-muted); text-decoration:none; padding:10px 20px; border:1px solid var(--glass-border); border-radius:30px; transition:all 0.2s ease; background:rgba(255,255,255,0.05);">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                </svg>
-                <span>Zum Projekt auf GitHub</span>
-            </a>
+            <p>&copy; 2026 Villa Kunterbunt Project. Alle Rechte vorbehalten.</p>
+            <p><a href="https://github.com/derlemue/villa-kunterbunt" target="_blank">Projekt auf GitHub</a></p>
         </footer>
     </div>
 
@@ -834,8 +829,8 @@
 
                     navigator.mediaSession.metadata = new MediaMetadata({
                         title: data.title,
-                        artist: data.artist,
-                        album: "Die Villa Kunterbunt",
+                        artist: "Villa Kunterbunt",
+                        album: "Das Korrespondenz Epos",
                         artwork: [
                             { src: absoluteArtworkUrl, sizes: '512x512', type: 'image/png' }
                         ]
