--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
                 <div class="fork-card">
                     <span class="fork-card-label">Active Forks</span>
                     <div class="hero-forks">
-                        <a href="https://github.com/lemueIO/villa-kunterbunt" target="_blank">
-                            <img src="https://img.shields.io/github/actions/workflow/status/lemueIO/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=lemueIO&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
-                                alt="lemueIO Status">
+                        <!-- User's Fork (Should be Green) -->
+                        <a href="https://github.com/derlemue/villa-kunterbunt" target="_blank">
+                            <img src="https://img.shields.io/github/actions/workflow/status/derlemue/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=derlemue&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
+                                alt="derlemue Status">
                         </a>
+                        <!-- Other Forks -->
                         <a href="https://github.com/m3l1nda/villa-kunterbunt" target="_blank">
                             <img src="https://img.shields.io/github/actions/workflow/status/m3l1nda/villa-kunterbunt/sync-fork-caller.yml?branch=main&label=m3l1nda&style=for-the-badge&logo=github&logoColor=white&labelColor=1e293b"
                                 alt="m3l1nda Status">
